--- a/index.html
+++ b/index.html
@@ -510,6 +510,27 @@
       </div>
     </section>
 
+    <div class="projectCardMobile">
+      <div class="mobileCards">
+        <img src="./assets/cmash2.jpg" alt="colour smash picture" />
+        <div class="mCardTxt">
+          <h1>Colour Smash</h1>
+          <p>
+            Test your luck and choose one of three colours and see which will
+            reign on top
+          </p>
+        </div>
+      </div>
+
+      <div class="mobileCards">
+        <img src="./assets/gdpic.jpg" alt="colour smash picture" />
+        <div class="mCardTxt">
+          <h1>Colour Smash</h1>
+          <p>aasdsd</p>
+        </div>
+      </div>
+    </div>
+
     <section class="contactContainer section" id="contactLink">
       <div class="txtBox">
         <h1>Let's build something!</h1>
