--- a/index.html
+++ b/index.html
@@ -97,7 +97,8 @@
       <div class="txtArea">
         <span class="webdevTxt"> Web Developer </span>
         <p class="mainP">
-          specialized in crafting aesthetically pleasing and functional websites
+          specialized in generating aesthetically pleasing and functional
+          websites
         </p>
       </div>
     </main>
