--- a/index.html
+++ b/index.html
@@ -16,10 +16,12 @@
     />
 
     <link rel="stylesheet" href="./css/styles.css" />
-    <title>A.McCarthy | Portfolio</title>
+    <title>Adrian McCarthy</title>
   </head>
   <body>
-    <div id="circularcursor"></div>
+    <!--
+     <div id="circularcursor"></div>
+   -->
 
     <header class="headerSection">
       <ul class="naviLinks">
@@ -70,19 +72,44 @@
           <li class="navToggle">
             <!-- <a href="#"  id="toggleLink" aria-label="mobile toggle link"> -->
             <svg
-              class="toggleSvg"
+              class="toggleSvgOpen"
               width="20"
-              height="20"
-              viewBox="0 0 20 20"
+              height="24"
+              viewBox="0 0 20 24"
               fill="none"
               xmlns="http://www.w3.org/2000/svg"
             >
-              <path
-                id="Vector"
-                d="M0.714286 3.67347H19.2857C19.6802 3.67347 20 3.30801 20 2.85714V0.816327C20 0.365459 19.6802 0 19.2857 0H0.714286C0.319777 0 0 0.365459 0 0.816327V2.85714C0 3.30801 0.319777 3.67347 0.714286 3.67347ZM0.714286 11.8367H19.2857C19.6802 11.8367 20 11.4713 20 11.0204V8.97959C20 8.52872 19.6802 8.16327 19.2857 8.16327H0.714286C0.319777 8.16327 0 8.52872 0 8.97959V11.0204C0 11.4713 0.319777 11.8367 0.714286 11.8367ZM0.714286 20H19.2857C19.6802 20 20 19.6345 20 19.1837V17.1429C20 16.692 19.6802 16.3265 19.2857 16.3265H0.714286C0.319777 16.3265 0 16.692 0 17.1429V19.1837C0 19.6345 0.319777 20 0.714286 20Z"
-                fill="black"
-              />
+              <g id="Group 2">
+                <path
+                  id="Vector"
+                  d="M3.67347 23.1429L3.67347 0.857142C3.67347 0.383731 3.30801 -7.15255e-07 2.85714 -7.15255e-07H0.816327C0.365459 -7.15255e-07 0 0.383731 0 0.857142L0 23.1429C0 23.6163 0.365459 24 0.816327 24H2.85714C3.30801 24 3.67347 23.6163 3.67347 23.1429ZM11.8367 23.1429L11.8367 0.857142C11.8367 0.383731 11.4713 -7.15255e-07 11.0204 -7.15255e-07H8.97959C8.52872 -7.15255e-07 8.16327 0.383731 8.16327 0.857142L8.16327 23.1429C8.16327 23.6163 8.52872 24 8.97959 24H11.0204C11.4713 24 11.8367 23.6163 11.8367 23.1429ZM20 23.1429L20 0.857142C20 0.383731 19.6345 -7.15255e-07 19.1837 -7.15255e-07H17.1429C16.692 -7.15255e-07 16.3265 0.383731 16.3265 0.857142L16.3265 23.1429C16.3265 23.6163 16.692 24 17.1429 24H19.1837C19.6345 24 20 23.6163 20 23.1429Z"
+                  fill="black"
+                />
+              </g>
             </svg>
+
+            <svg
+              class="toggleSvgClose"
+              width="21"
+              height="21"
+              viewBox="0 0 21 21"
+              fill="none"
+              xmlns="http://www.w3.org/2000/svg"
+            >
+              <g id="Group 1">
+                <path
+                  id="Vector"
+                  d="M3.25415 20.3257L20.3257 3.25414C20.6884 2.89149 20.7239 2.33912 20.4051 2.02031L18.962 0.577233C18.6432 0.258422 18.0908 0.293954 17.7282 0.656602L0.656612 17.7282C0.293964 18.0908 0.258432 18.6432 0.577243 18.962L2.02032 20.4051C2.33913 20.7239 2.8915 20.6884 3.25415 20.3257Z"
+                  fill="white"
+                />
+                <path
+                  id="Vector_2"
+                  d="M0.656585 3.25415L17.7282 20.3257C18.0908 20.6884 18.6432 20.7239 18.962 20.4051L20.4051 18.962C20.7239 18.6432 20.6883 18.0908 20.3257 17.7282L3.25412 0.656612C2.89147 0.293964 2.3391 0.258432 2.02029 0.577243L0.577216 2.02032C0.258405 2.33913 0.293937 2.8915 0.656585 3.25415Z"
+                  fill="white"
+                />
+              </g>
+            </svg>
+
             <!--</a> -->
           </li>
         </ul>
@@ -95,10 +122,9 @@
 
     <main class="mainSection" id="landingLink">
       <div class="txtArea">
-        <span class="webdevTxt"> Web Developer </span>
+        <span class="webdevTxt"> Frontend Developer </span>
         <p class="mainP">
-          specialized in generating aesthetically pleasing and functional
-          websites
+          Creating aesthetically pleasing and functional websites
         </p>
       </div>
     </main>
@@ -240,10 +266,9 @@
       <div class="box2">
         <p class="aboutP">
           A freelance developer based in Toronto striving to create experiences
-          that are engaging, accessible, and user-centric. The combination of my
-          passion for design, code & minimalism gives me the freedom to build
-          fresh and optimized websites and microsites for companies and
-          individuals.
+          that are engaging, accessible, and user-centric. My passion for
+          design, sustainability and human-readable code gives me the freedom to
+          build fresh and optimized websites and microsites for individuals.
         </p>
       </div>
     </section>
