--- a/index.html
+++ b/index.html
@@ -18,6 +18,12 @@
     <link rel="stylesheet" href="./css/styles.css" />
     <link rel="manifest" href="manifest.json" />
 
+    <link rel="apple-touch-icon" href="/assets/iconPNG.png" />
+    <link rel="apple-touch-icon" sizes="32x32" href="/assets/iconPNG.png" />
+    <link rel="icon" href="/assets/iconPNG.png" />
+    <meta name="apple-moile-web-app-status-bar" content="#212838" />
+    <meta name="theme-color" content="#212838" />
+
     <title>Adrian McCarthy</title>
   </head>
   <body>
@@ -126,12 +132,37 @@
     </span>
 
     <main class="mainSection" id="landingLink">
-      <div class="txtArea">
-        <span class="webdevTxt"> Frontend Developer </span>
-        <p class="mainP">
-          Creating aesthetically pleasing and functional websites
-        </p>
-        <button class="mainBtn">Connect</button>
+      <div class="txtContainer">
+        <div class="txtArea">
+          <h1 class="webdevTxt">Frontend Developer</h1>
+
+          <p class="mainP">
+            Creating aesthetically pleasing and functional websites
+          </p>
+        </div>
+      </div>
+      <div class="arrowContainer">
+        <svg
+          class="arrow"
+          width="37"
+          height="22"
+          viewBox="0 0 37 22"
+          fill="none"
+          xmlns="http://www.w3.org/2000/svg"
+        >
+          <g id="Group 1">
+            <path
+              id="Vector"
+              d="M19.1922 21.2637L36.2637 4.19214C36.6264 3.82949 36.5686 3.1838 36.1347 2.74987L34.1705 0.785682C33.7365 0.351744 33.0908 0.293959 32.7282 0.656607L15.6566 17.7282C15.294 18.0908 15.3518 18.7365 15.7857 19.1705L17.7499 21.1346C18.1838 21.5686 18.8295 21.6264 19.1922 21.2637Z"
+              fill="#5B78C7"
+            />
+            <path
+              id="Vector_2"
+              d="M0.718593 4.1923L17.7902 21.2639C18.1528 21.6265 18.7985 21.5687 19.2324 21.1348L21.1966 19.1706C21.6306 18.7367 21.6884 18.091 21.3257 17.7283L4.25413 0.65677C3.89148 0.294122 3.24579 0.351907 2.81185 0.785845L0.847668 2.75003C0.41373 3.18397 0.355945 3.82966 0.718593 4.1923Z"
+              fill="#5B78C7"
+            />
+          </g>
+        </svg>
       </div>
     </main>
 
@@ -271,24 +302,24 @@
       </div>
       <div class="box2">
         <p class="aboutP">
-          As a Toronto-based freelance developer, I'm on a mission to craft web
-          experiences that not only captivate but also connect with your
-          audience. My driving forces are design excellence, sustainability, and
-          code that's as understandable as it is efficient. <br />
+          As a Toronto-based freelance developer, I'm on a mission to create web
+          experiences that not only captivate but also deeply resonate with your
+          audience. My expertise lies in seamlessly merging my passions for
+          style, nature, and technology to craft web solutions that stand
+          out.<br />
           <br />
 
-          I believe in the power of user-centric design, where every element
-          serves a purpose, creating a seamless and engaging journey. Whether
-          you're an individual looking to establish your online presence or a
-          growing business needing a digital facelift, my passion translates
-          into fresh, optimized websites and microsites tailored to your unique
-          needs. <br />
+          Whether you're an individual seeking to establish your online presence
+          or a growing business in need of a digital transformation, I
+          specialize in delivering fresh, optimized websites and microsites
+          tailored to your unique requirements.<br />
           <br />
 
-          By choosing me as your development partner, you're not just getting a
-          coder; you're gaining a creative collaborator committed to your
-          success. Let's work together to build a digital experience that makes
-          a lasting impression and drives your goals forward. <br />
+          When you choose me as your development partner, you're not just
+          selecting a coder; you're enlisting a dedicated creative collaborator
+          committed to your success. Let's embark on a journey together to build
+          a digital experience that leaves a lasting impression and propels your
+          objectives forward.<br />
           <br />
         </p>
       </div>
@@ -296,7 +327,13 @@
 
     <section class="projectSection" id="projectLink">
       <div class="projectTxt">
-        <h1 class="projectH1">Tech stack used for each vision</h1>
+        <h1 class="projectH1">Powering Creativity:</h1>
+        <p class="projectP">
+          leverage a cutting-edge toolkit of technologies and design tools to
+          bring your web projects to life. With a passion for innovation, I
+          ensure your digital solutions are on the forefront of style and
+          technology.
+        </p>
       </div>
 
       <div class="devTools">
@@ -504,11 +541,11 @@
     </section>
 
     <div class="projectTxt2">
-      <h1>Crafting Digital Magic, One Line of Code at a Time</h1>
+      <h1>Explore My Work</h1>
       <p>
-        Passionately crafting scalable websites from scratch with an unwavering
-        focus on JavaScript, transforming your ideas into dynamic, interactive
-        web experiences.
+        Discover my portfolio of web projects that beautifully blend style,
+        nature, and tech. Each project is a testament to my passion for creating
+        captivating web experiences.
       </p>
     </div>
 
@@ -604,18 +641,21 @@
 
     <section class="contactContainer section">
       <div class="txtBox">
-        <h1>
-          Your Brand, Your Style, Your Website: Let's design a digital
-          masterpiece together.
-        </h1>
+        <h1>Your Brand, Your Style, Your Web Presence</h1>
+        <p>
+          Let's embark on a creative journey to craft a digital masterpiece that
+          resonates with your audience and drives your success.
+        </p>
       </div>
     </section>
     <footer class="footContainer" id="contactLink">
       <div class="footBox1">
         <h1>Let's work together</h1>
         <p>
-          Feel free to reach out if you're looking for a developer, have a
-          question, or just want to connect.
+          Ready to take the next step in your digital journey? Reach out to me
+          today, and let's collaborate on creating exceptional web solutions
+          that resonate with your audience. Your success is my mission, and
+          together, we'll make it happen.
         </p>
       </div>
       <div class="footBox2">
@@ -714,11 +754,5 @@
         </div>
       </div>
     </footer>
-
-    <script>
-      if ("serviceWorker" in navigator) {
-        navigator.serviceWorker.register("/service-worker.js");
-      }
-    </script>
   </body>
 </html>
