--- a/index.html
+++ b/index.html
@@ -4,9 +4,6 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
-    <script defer src="./js/main.js"></script>
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -327,7 +324,7 @@
 
     <section class="projectSection" id="projectLink">
       <div class="projectTxt">
-        <h1 class="projectH1">Powering Creativity:</h1>
+        <h1 class="projectH1">Powering Creativity</h1>
         <p class="projectP">
           leverage a cutting-edge toolkit of technologies and design tools to
           bring your web projects to life. With a passion for innovation, I
@@ -754,5 +751,9 @@
         </div>
       </div>
     </footer>
+
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
+    <script src="./js/main.js"></script>
   </body>
 </html>
