scrapped the arrow and updated project buttons

--- a/index.html
+++ b/index.html
@@ -13,7 +13,6 @@
     />
 
     <link rel="stylesheet" href="./css/styles.css" />
-    <link rel="manifest" href="manifest.json" />
 
     <link rel="apple-touch-icon" href="/assets/iconPNG.png" />
     <link rel="apple-touch-icon" sizes="32x32" href="/assets/iconPNG.png" />
@@ -131,35 +130,12 @@
     <main class="mainSection" id="landingLink">
       <div class="txtContainer">
         <div class="txtArea">
-          <h1 class="webdevTxt">Frontend Developer</h1>
+          <p class="webdevTxt">Frontend Developer</p>
 
           <p class="mainP">
             Creating aesthetically pleasing and functional websites
           </p>
         </div>
-      </div>
-      <div class="arrowContainer">
-        <svg
-          class="arrow"
-          width="37"
-          height="22"
-          viewBox="0 0 37 22"
-          fill="none"
-          xmlns="http://www.w3.org/2000/svg"
-        >
-          <g id="Group 1">
-            <path
-              id="Vector"
-              d="M19.1922 21.2637L36.2637 4.19214C36.6264 3.82949 36.5686 3.1838 36.1347 2.74987L34.1705 0.785682C33.7365 0.351744 33.0908 0.293959 32.7282 0.656607L15.6566 17.7282C15.294 18.0908 15.3518 18.7365 15.7857 19.1705L17.7499 21.1346C18.1838 21.5686 18.8295 21.6264 19.1922 21.2637Z"
-              fill="#5B78C7"
-            />
-            <path
-              id="Vector_2"
-              d="M0.718593 4.1923L17.7902 21.2639C18.1528 21.6265 18.7985 21.5687 19.2324 21.1348L21.1966 19.1706C21.6306 18.7367 21.6884 18.091 21.3257 17.7283L4.25413 0.65677C3.89148 0.294122 3.24579 0.351907 2.81185 0.785845L0.847668 2.75003C0.41373 3.18397 0.355945 3.82966 0.718593 4.1923Z"
-              fill="#5B78C7"
-            />
-          </g>
-        </svg>
       </div>
     </main>
 
@@ -571,10 +547,10 @@
             </div>
 
             <div class="cards rps">
-              <h1>Rock Paper Scissors</h1>
+              <h1>House plant diary</h1>
               <p>
-                Classic Rock Paper Scissors game built purely with HTML, CSS,
-                and Javascript
+                This a design for a blog style house plant diary where users are
+                able to document their grow. Designed with Figma.
               </p>
 
               <button class="cardBtns">View</button>
@@ -600,12 +576,12 @@
 
     <div class="projectCardMobile">
       <div class="mobileCards">
-        <img src="./assets/cmash2.jpg" alt="colour smash picture" />
+        <img src="./assets/rps2.jpg" alt="picture of the game" />
         <div class="mCardTxt">
-          <h1>Colour Smash</h1>
+          <h1>Rock Paper Scissors</h1>
           <p>
-            Test your luck and choose one of three colours and see which will
-            reign on top
+            Sharpen your wits and take on the classic challenge of Rock, Paper,
+            Scissors: the ultimate game of strategy and chance
           </p>
 
           <button class="cardBtns">View</button>
@@ -615,8 +591,11 @@
       <div class="mobileCards">
         <img src="./assets/gdpic.jpg" alt="colour smash picture" />
         <div class="mCardTxt">
-          <h1>Colour Smash</h1>
-          <p>aasdsd</p>
+          <h1>House plant diary</h1>
+          <p>
+            This a design for a blog style house plant diary where users are
+            able to document their grow. Designed with Figma.
+          </p>
 
           <button class="cardBtns">View</button>
         </div>
@@ -625,10 +604,10 @@
       <div class="mobileCards">
         <img src="./assets/cmash2.jpg" alt="colour smash picture" />
         <div class="mCardTxt">
-          <h1>Colour Smash</h1>
+          <h1>Colour Mash</h1>
           <p>
-            Test your luck and choose one of three colours and see which will
-            reign on top
+            Dive into the colorful chaos of Color Mash, where three vibrant hues
+            collide in an epic battle of shades and strategy!
           </p>
 
           <button class="cardBtns">View</button>
