--- a/ticTacToe/index.html
+++ b/ticTacToe/index.html
@@ -19,6 +19,7 @@
         <button class="btnOptn"></button>
         <button class="btnOptn"></button>
       </div>
+      <button id="restart">Restart</button>
     </div>
     <script src="script.js"></script>
   </body>
