--- a/index.html
+++ b/index.html
@@ -5,15 +5,17 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
 
+    <!--          -- Google Fonts --          -->
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
       href="https://fonts.googleapis.com/css2?family=Open+Sans&family=Poppins&display=swap"
       rel="stylesheet"
     />
-
+    <!--          -- STYLE SHEET --          -->
     <link rel="stylesheet" href="./css/styles.css" />
 
+    <!--          -- PWA ICONS --          -->
     <link rel="apple-touch-icon" href="/assets/iconPNG.png" />
     <link rel="apple-touch-icon" sizes="32x32" href="/assets/iconPNG.png" />
     <link rel="icon" href="/assets/iconPNG.png" />
@@ -532,12 +534,14 @@
 
     <section class="projectDesktop">
       <div class="cardTxtContainer">
-        <h1>House plant diary</h1>
+        <h1>Tic Tac Toe</h1>
         <p>
-          This a design for a blog style house plant diary where users are able
-          to document their grow. Designed with Figma.
+          This vibrant take on the classical Tic Tac Toe game made purely with
+          html, css and javascript
         </p>
-        <button class="cardBtns">View</button>
+        <button class="cardBtns">
+          <a href="./ticTacToe/index.html">Play</a>
+        </button>
       </div>
 
       <div class="cardImgContainer topSection">
@@ -555,7 +559,7 @@
           Scissors: the ultimate game of strategy and chance
         </p>
 
-        <button class="cardBtns">View</button>
+        <button class="cardBtns"><a href="#">Play</a></button>
       </div>
       <div class="cardImgContainer">
         <div class="photo">
@@ -572,7 +576,7 @@
           collide in an epic battle of shades and strategy!
         </p>
 
-        <button class="cardBtns">View</button>
+        <button class="cardBtns"><a href="#">Play</a></button>
       </div>
       <div class="cardImgContainer bottomSection">
         <div class="photo">
@@ -591,20 +595,22 @@
             Scissors: the ultimate game of strategy and chance
           </p>
 
-          <button class="cardBtns">View</button>
+          <button class="cardBtns"><a href="#">Play</a></button>
         </div>
       </div>
 
       <div class="mobileCards">
         <img src="./assets/gdpic.jpg" alt="colour smash picture" />
         <div class="mCardTxt">
-          <h1>House plant diary</h1>
+          <h1>Tic Tac Toe</h1>
           <p>
-            This a design for a blog style house plant diary where users are
-            able to document their grow. Designed with Figma.
+            This vibrant take on the classical Tic Tac Toe game made purely with
+            html, css and javascript
           </p>
 
-          <button class="cardBtns">View</button>
+          <button class="cardBtns">
+            <a href="./ticTacToe/index.html">Play</a>
+          </button>
         </div>
       </div>
 
@@ -617,7 +623,7 @@
             collide in an epic battle of shades and strategy!
           </p>
 
-          <button class="cardBtns">View</button>
+          <button class="cardBtns"><a href="#">Play</a></button>
         </div>
       </div>
     </div>
@@ -738,6 +744,7 @@
       </div>
     </footer>
 
+    <!--          -- SCRIPTING FILES --          -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/gsap.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.11.5/ScrollTrigger.min.js"></script>
     <script src="./js/main.js"></script>
