updated and added new game

--- a/index.html
+++ b/index.html
@@ -570,13 +570,12 @@
 
     <section class="projectDesktop">
       <div class="cardTxtContainer">
-        <h1>Colour Mash</h1>
+        <h1>Cyber Swipe</h1>
         <p>
-          Dive into the colorful chaos of Color Mash, where three vibrant hues
-          collide in an epic battle of shades and strategy!
+          A cyber punk take on flappy bird
         </p>
 
-        <button class="cardBtns"><a href="#">Play</a></button>
+        <button class="cardBtns"><a href="./cyberSwipe/index.html">Play</a></button>
       </div>
       <div class="cardImgContainer bottomSection">
         <div class="photo">
@@ -617,13 +616,12 @@
       <div class="mobileCards">
         <img src="./assets/cmash2.jpg" alt="colour smash picture" />
         <div class="mCardTxt">
-          <h1>Colour Mash</h1>
+          <h1>Cyber Swipe</h1>
           <p>
-            Dive into the colorful chaos of Color Mash, where three vibrant hues
-            collide in an epic battle of shades and strategy!
+            A cyber punk take on flappy bird with power Ups
           </p>
 
-          <button class="cardBtns"><a href="#">Play</a></button>
+          <button class="cardBtns"><a href="./cyberSwipe/index.html">Play</a></button>
         </div>
       </div>
     </div>
