--- a/cyberSwipe/index.html
+++ b/cyberSwipe/index.html
@@ -12,8 +12,17 @@
 <body>
     <canvas id="canvas1"></canvas>
 
+    <div class="controls">
+        <button id="restartButton">R</button>
+        <button id="fullScreenButton">F</button>
+        <button id="debugButton">D</button>
+    </div>
+
     <div class="assets">
         <img id="background" src="./images/background_single.png" alt="background image">
+        <img id="background2" src="./images/background_single2.png" alt="background2 image">
+        <img id="playerFish" src="./images/player_fish.png" alt="player image">
+        <img id="smallGears" src="./images/smallGears.png" alt="gears image">
     </div>
     
     <script src="./scripts/background.js"></script>
