changed font and a whole lot

--- a/cyberSwipe/index.html
+++ b/cyberSwipe/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Cyber Punk</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
-<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-<link href="https://fonts.googleapis.com/css2?family=Bungee&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Itim&family=Sniglet:wght@400;800&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./css/style.css">
 </head>
 <body>
@@ -19,10 +19,10 @@
     </div>
 
     <div class="assets">
-        <img id="background" src="./images/background_single.png" alt="background image">
+        <img id="background" src="./images/game_background_3. 2.png" alt="background image">
         <img id="background2" src="./images/background_single2.png" alt="background2 image">
-        <img id="playerFish" src="./images/player_fish.png" alt="player image">
-        <img id="smallGears" src="./images/smallGears.png" alt="gears image">
+        <img id="playerFish" src="./images/redHood.png" alt="player image">
+        <img id="smallGears" src="./images/enemy4.png" alt="gears image">
     </div>
     
     <script src="./scripts/background.js"></script>
