--- a/cyberSwipe/index.html
+++ b/cyberSwipe/index.html
@@ -21,7 +21,7 @@
     <div class="assets">
         <img id="background" src="./images/game_background_3. 2.png" alt="background image">
         <img id="background2" src="./images/background_single2.png" alt="background2 image">
-        <img id="playerFish" src="./images/redHood.png" alt="player image">
+        <img id="playerFish" src="./images/CharacterSheet.png" alt="player image">
         <img id="smallGears" src="./images/enemy4.png" alt="gears image">
     </div>
     
